--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                     <h2 class="subhead-main">We Are Verified</h2>
                     <h1 class="main-head"> Our Accrediations</h1>
                 </div>
-                <div class="cards-wrapper">
+                <div class="cards-wrapper" id="Accre">
                     <div class="accre-card">
                         <a href="#">
                             <div class="card-contain">
